# bare-zenroom

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml
scripts/: addon-generate.js  zenroom-build.js
